package com.example.lostandfound.Data

import androidx.compose.ui.graphics.Color


val stringToColor = mapOf(
    "Red" to Color.Red,
    "Orange" to Color(0xFFFF9D47),
    "Yellow" to Color.Yellow,
    "Green" to Color.Green,
    "Cyan" to Color.Cyan,
    "Blue" to Color.Blue,
    "Pink" to Color(0xFFFFA3CE),
    "Purple" to Color(0xFF9F83F1),
    "Brown" to Color(0xFF775944),
    "Gray" to Color.Gray,
    "Black" to Color.Black,
    "White" to Color.White
)
