...
        IconButton(
            onClick = {
                // set dialog visible
                viewModel.isReportUserDialogShown.value = true
            },
            modifier = Modifier  // add the background circle
                .testTag("ReportUserButton")
        ) {
            Icon(
                imageVector = Icons.Outlined.Report,
                contentDescription = "Report user",
                tint = MaterialTheme.colorScheme.primary,
                modifier = Modifier
...
                })

            },
            onDismissButtonClicked = {
                viewModel.isReportUserDialogShown.value = false
            },
            testTag = "ReportUserInput"
        )


    }
}

...
