...
) {
    Column {
        // first name field
        CustomEditText(
            fieldLabel = "First name",
            fieldContent = viewModel.firstName.value,
            testTag = "editProfileFirstName",
            leftIcon = Icons.Outlined.AccountCircle,
            isEditable = true,
            onTextChanged = { viewModel.onFirstNameChanged(it) },
        )

        HorizontalDivider(thickness = 1.dp, color = Color.Gray)

        // last name field
        CustomEditText(
            fieldLabel = "Last name",
            fieldContent = viewModel.lastName.value,
            testTag = "editProfileLastName",
            leftIcon = Icons.Outlined.AccountCircle,
            isEditable = true,
            onTextChanged = { viewModel.onLastNameChanged(it) }
        )

        HorizontalDivider(thickness = 1.dp, color = Color.Gray)
...

    Box(
        modifier = Modifier.fillMaxWidth(),
        contentAlignment = Alignment.Center
    ) {
        CustomButton(
            text = "Save Profile",
            type = ButtonType.FILLED,
            enabled = !isLoading,  // if loading, disable the button
            onClick = {
                // handle save logic here, as it involves the context (Toast message and auth manager)
                // update the data from the firestore database
                // but only when not in preview to avoid firebase errors
...
